--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "apollo-server-testing": "2.6.1",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "esm": "^3.2.25",
