--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "jest",
-    "start": "nodemon -r esm src/index.js",
+    "start": "set NODE_TLS_REJECT_UNAUTHORIZED='0' && nodemon -r esm src/index.js",
     "start:ci": "node src/index.js"
   },
   "author": "jczuchra",
@@ -27,6 +27,7 @@
     "graphql": "^14.2.1",
     "isemail": "^3.1.3",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.4.10",
     "nodemon": "^1.18.4",
     "pg": "^8.0.0",
     "psql": "0.0.1",
