--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.3",
     "eslint": "^6.8.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
