--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apollo-server": "2.6.1",
     "apollo-server-express": "^2.12.0",
     "apollo-server-testing": "2.6.1",
+    "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
